cabal-version:      3.2
name:               lua2jass
version:            0.1.0.0
license:            AGPL-3.0-only
license-file:       LICENSE
author:             lep
maintainer:         lep.delete@googlemail.com
category:           Language
build-type:         Simple

executable lua2jass
    main-is:          Main.hs
    default-language: Haskell2010

    build-depends: base, mtl, containers, binary, hashable,
                    parser-combinators, megaparsec, bytestring, file-embed,
                    filepath, text, optparse-applicative,
                    alex-tools, template-haskell, language-lua

    other-modules: Compiler.Bytecode, Compiler.Lua, Compiler.Natives,
                    Compiler.Preprocess, Data.Composeable, Data.MonoidMap,
                    Jass.Ast, Jass.Parser, Jass.Printer

